--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             "action": {
               "type": "uri",
               "label": "action",
-              "uri": "https://lin.ee/yLocc0B"
+              "uri": "https://bit.ly/3CP70s9"
             }
           }
         ],
